<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.baccalculator.MainActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblWeight"
            android:id="@+id/textView"
          />

        <EditText
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextWeight"
            android:paddingLeft="10dp"
            android:layout_weight="0.88"
            android:hint="@string/hint" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblGender"
            android:id="@+id/switchGender"
            android:paddingLeft="10dp"
            android:showText="true"
            android:textOn="M"
            android:textOff="F"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnSave" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="clip_horizontal"
        android:paddingTop="40dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblDrinkSize"
            android:id="@+id/textView2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"

            android:id="@+id/rGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1oz"
                android:id="@+id/radioButton1oz"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:checked="true"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio5Oz"
                android:id="@+id/radioButton5oz"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio12oz"
                android:id="@+id/radioButton12Oz"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblAlcohol"
            android:id="@+id/textView3" />

        <SeekBar
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:max="25"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewSeekVal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingTop="30dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAddDrink"
            android:id="@+id/btnAddDrink"
             />

        <Button
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="@string/btnReset"
            android:id="@+id/btnReset" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblBacLevel"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewBACLevel"
            android:text="0.00" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:max="25"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblStatus"
            android:id="@+id/textView5"
            android:paddingRight="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewStatus"
            android:text="@string/lblSafe"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
